# rusty-bote

./: .env.example  Cargo.toml  project.md  readme.md  rusty_bote.db
src/: main.rs
src/commands/: mod.rs  poll.rs
src/db/: mod.rs
src/handlers/: mod.rs  vote.rs
src/models/: mod.rs
src/tasks/: mod.rs  poll_ender.rs
src/utils/: mod.rs
src/voting/: approval.rs  mod.rs  plurality.rs  ranked.rs  star.rs
